--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
     "--clang-tidy",
     "--cross-file-rename",
     "--suggest-missing-includes"
-  ]
+  ],
+  "python.formatting.provider": "yapf"
 }
