chore: move build.yml into common dir.

--- a/.azure-pipelines/pr.yml
+++ b/.azure-pipelines/pr.yml
@@ -40,4 +40,4 @@ pool:
   vmImage: ubuntu-22.04
 
 jobs:
-- template: /.azure-pipelines/build.yml@self
+- template: /.azure-pipelines/common/build.yml@self
