--- a/.gitignore
+++ b/.gitignore
@@ -499,3 +499,9 @@ $RECYCLE.BIN/
 
 # User-level bazelrc
 /user.bazelrc
+
+### Automatically added by Hedron's Bazel Compile Commands Extractor: https://github.com/hedronvision/bazel-compile-commands-extractor
+# Ignore the `external` link (that is added by `bazel-compile-commands-extractor`). The link differs between macOS/Linux and Windows, so it shouldn't be checked in. The pattern must not end with a trailing `/` because it's a symlink on macOS/Linux.
+/external
+# Ignore the directory in which `clangd` stores its local index.
+/.cache/
