chore: fix distdir official pipeline trigger

--- a/.azure-pipelines/distdir/official.yml
+++ b/.azure-pipelines/distdir/official.yml
@@ -19,9 +19,10 @@ trigger:
   batch: true
   branches:
     include:
-    - master
+    - main
   paths:
     include:
+    - .azure-pipelines/distdir/official.yml
     - .bazelversion
     - WORKSPACE.bazel
 
