chore(ci): distdir should be triggered if requirements.txt changed

--- a/.azure-pipelines/distdir/official.yml
+++ b/.azure-pipelines/distdir/official.yml
@@ -25,6 +25,7 @@ trigger:
     - .azure-pipelines/distdir/official.yml
     - .bazelversion
     - WORKSPACE.bazel
+    - requirements.txt
 
 pr: none
 
