--- a/.azure-pipelines/common/build.yml
+++ b/.azure-pipelines/common/build.yml
@@ -96,6 +96,7 @@ jobs:
       --distdir=$(Pipeline.Workspace)/distdir
       --compilation_mode opt
       --config=clang-asan
+      --local_test_jobs=1
       --
       //...
     displayName: Test project
