chore(renovate): azure pipeline tasks only extract major versions

--- a/renovate.json
+++ b/renovate.json
@@ -12,9 +12,11 @@
   "platformCommit": true,
   "packageRules": [
     {
+      // Only extract major version.
       "matchManagers": [
         "azure-pipelines"
       ],
+      "extractVersion": "^(?<version>\\d+)",
       "automerge": true
     },
     {
