--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,13 +11,16 @@ description = "Python project manager for ONE repo"
 name = "one"
 requires-python = ">=3.7"
 version = "0.0.1-alpha.1"
+[project.optional-dependencies]
 
 [tool.pdm.dev-dependencies]
 dev = [
-  "cpplint<2.0,>=1.5.5",
-  "isort<6.0,>=5.8.0",
-  "pylint<3.0,>=2.7.4",
-  "yapf<1.0,>=0.31.0",
+    "cpplint<2.0,>=1.5.5",
+    "isort<6.0,>=5.8.0",
+    "pylint<3.0,>=2.7.4",
+    "yapf<1.0,>=0.31.0",
+    "mkdocs>=1.4.1",
+    "markdown-include>=0.7.0",
 ]
 
 # [[tool.pdm.source]]
