chore: migrate python and deps to bzlmod

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -36,3 +36,15 @@ llvm.toolchain(
 use_repo(llvm, "llvm_toolchain")
 
 register_toolchains("@llvm_toolchain//:all")
+
+bazel_dep(name = "rules_python", version = "0.33.2")
+
+pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
+
+pip.parse(
+    hub_name = "mono_pip_deps",
+    python_version = "3.11",
+    requirements_lock = "//:requirements.txt",
+)
+
+use_repo(pip, "mono_pip_deps")
