chore: migrate all deps except libevent and openssl

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -56,6 +56,21 @@ bazel_dep(name = "rules_perl", version = "0.2.0")
 # Dependencies
 #
 
+bazel_dep(name = "boost.graph", version = "1.83.0.bzl.1")
+bazel_dep(name = "boost.process", version = "1.83.0.bzl.2")
+bazel_dep(name = "boost.program_options", version = "1.83.0.bzl.2")
+bazel_dep(name = "boost.property_map", version = "1.83.0.bzl.1")
+bazel_dep(name = "boost.property_tree", version = "1.83.0.bzl.1")
+bazel_dep(name = "boost.xpressive", version = "1.83.0.bzl.1")
+single_version_override(
+    module_name = "boost.xpressive",
+    patch_strip = 1,
+    patches = ["//bazel/third_party/boost.xpressive:ipp-hdrs.patch"],
+)
+
+bazel_dep(name = "abseil-cpp", version = "20240116.2")
+bazel_dep(name = "gflags", version = "2.2.2")
+bazel_dep(name = "glog", version = "0.7.1")
 bazel_dep(name = "rapidjson", version = "1.1.0")
 
 #
@@ -63,7 +78,7 @@ bazel_dep(name = "rapidjson", version = "1.1.0")
 #
 
 bazel_dep(name = "googletest", version = "1.14.0.bcr.1", dev_dependency = True)
-bazel_dep(name = "google_benchmark", version = "1.8.4")
+bazel_dep(name = "google_benchmark", version = "1.8.4", dev_dependency = True)
 
 # Hedron's Compile Commands Extractor for Bazel
 # https://github.com/hedronvision/bazel-compile-commands-extractor
