--- a/one/codelab/minikafka/transport/BUILD.bazel
+++ b/one/codelab/minikafka/transport/BUILD.bazel
@@ -42,13 +42,13 @@ cc_library(
         "//one/codelab/minikafka/protocol:request_header",
         "//one/codelab/minikafka/protocol:response_header",
         "//one/jinduo/net",
-        "@com_github_google_glog//:glog",
-        "@com_google_absl//absl/base",
-        "@com_google_absl//absl/container:flat_hash_map",
-        "@com_google_absl//absl/functional:bind_front",
-        "@com_google_absl//absl/status",
-        "@com_google_absl//absl/strings",
-        "@com_google_absl//absl/synchronization",
-        "@com_google_absl//absl/types:span",
+        "@glog//:glog",
+        "@abseil-cpp//absl/base",
+        "@abseil-cpp//absl/container:flat_hash_map",
+        "@abseil-cpp//absl/functional:bind_front",
+        "@abseil-cpp//absl/status",
+        "@abseil-cpp//absl/strings",
+        "@abseil-cpp//absl/synchronization",
+        "@abseil-cpp//absl/types:span",
     ],
 )
