--- a/one/base/BUILD.bazel
+++ b/one/base/BUILD.bazel
@@ -38,7 +38,7 @@ cc_library(
     hdrs = ["down_cast.h"],
     visibility = ["//visibility:public"],
     deps = [
-        "@com_google_absl//absl/base",
+        "@abseil-cpp//absl/base",
     ],
 )
 
@@ -49,7 +49,7 @@ cc_library(
     ],
     visibility = ["//visibility:public"],
     deps = [
-        "@com_google_absl//absl/base",
+        "@abseil-cpp//absl/base",
     ],
 )
 
