--- a/one/codelab/store_shared_ptr_in_any/BUILD.bazel
+++ b/one/codelab/store_shared_ptr_in_any/BUILD.bazel
@@ -28,8 +28,8 @@ cc_binary(
         "-Werror",
     ],
     deps = [
-        "@com_google_absl//absl/synchronization",
-        "@com_google_googletest//:gtest",
-        "@com_google_googletest//:gtest_main",
+        "@abseil-cpp//absl/synchronization",
+        "@googletest//:gtest",
+        "@googletest//:gtest_main",
     ],
 )
