--- a/one/jinduo/net/BUILD.bazel
+++ b/one/jinduo/net/BUILD.bazel
@@ -73,12 +73,12 @@ cc_library(
     deps = [
         "//one/base",
         "//one/jinduo/base",
-        "@com_github_google_glog//:glog",
-        "@com_google_absl//absl/base",
-        "@com_google_absl//absl/functional:bind_front",
-        "@com_google_absl//absl/strings",
-        "@com_google_absl//absl/synchronization",
-        "@com_google_absl//absl/time",
+        "@glog//:glog",
+        "@abseil-cpp//absl/base",
+        "@abseil-cpp//absl/functional:bind_front",
+        "@abseil-cpp//absl/strings",
+        "@abseil-cpp//absl/synchronization",
+        "@abseil-cpp//absl/time",
     ],
 )
 
@@ -93,8 +93,8 @@ cc_binary(
     ],
     deps = [
         ":net",
-        "@com_github_google_glog//:glog",
-        "@com_google_absl//absl/time",
+        "@glog//:glog",
+        "@abseil-cpp//absl/time",
     ],
 )
 
@@ -109,7 +109,7 @@ cc_binary(
     ],
     deps = [
         ":net",
-        "@com_google_absl//absl/time",
+        "@abseil-cpp//absl/time",
     ],
 )
 
@@ -124,9 +124,9 @@ cc_test(
     ],
     deps = [
         ":net",
-        "@com_github_google_glog//:glog",
-        "@com_google_absl//absl/functional:bind_front",
-        "@com_google_absl//absl/time",
+        "@glog//:glog",
+        "@abseil-cpp//absl/functional:bind_front",
+        "@abseil-cpp//absl/time",
     ],
 )
 
@@ -143,9 +143,9 @@ cc_test(
     ],
     deps = [
         ":net",
-        "@com_github_gflags_gflags//:gflags",
-        "@com_github_google_glog//:glog",
-        "@com_google_absl//absl/functional:bind_front",
+        "@gflags//:gflags",
+        "@glog//:glog",
+        "@abseil-cpp//absl/functional:bind_front",
     ],
 )
 
@@ -160,8 +160,8 @@ cc_test(
     ],
     deps = [
         ":net",
-        "@com_google_googletest//:gtest",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -176,8 +176,8 @@ cc_test(
     ],
     deps = [
         ":net",
-        "@com_google_googletest//:gtest",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -193,11 +193,11 @@ cc_test(
     tags = ["broken"],
     deps = [
         ":net",
-        "@com_github_gflags_gflags//:gflags",
-        "@com_github_google_glog//:glog",
-        "@com_google_absl//absl/functional:bind_front",
-        "@com_google_absl//absl/time",
-        "@com_google_googletest//:gtest",
-        "@com_google_googletest//:gtest_main",
+        "@gflags//:gflags",
+        "@glog//:glog",
+        "@abseil-cpp//absl/functional:bind_front",
+        "@abseil-cpp//absl/time",
+        "@googletest//:gtest",
+        "@googletest//:gtest_main",
     ],
 )
