--- a/one/jinduo/net/http/BUILD.bazel
+++ b/one/jinduo/net/http/BUILD.bazel
@@ -38,8 +38,8 @@ cc_library(
     visibility = ["//visibility:public"],
     deps = [
         "//one/jinduo/net",
-        "@com_github_google_glog//:glog",
-        "@com_google_absl//absl/time",
+        "@glog//:glog",
+        "@abseil-cpp//absl/time",
     ],
 )
 
@@ -57,10 +57,10 @@ cc_test(
     ],
     deps = [
         ":http",
-        "@com_github_gflags_gflags//:gflags",
-        "@com_github_google_glog//:glog",
-        "@com_google_googletest//:gtest",
-        "@com_google_googletest//:gtest_main",
+        "@gflags//:gflags",
+        "@glog//:glog",
+        "@googletest//:gtest",
+        "@googletest//:gtest_main",
     ],
 )
 
@@ -76,7 +76,7 @@ cc_binary(
     ],
     deps = [
         ":http",
-        "@com_github_gflags_gflags//:gflags",
-        "@com_github_google_glog//:glog",
+        "@gflags//:gflags",
+        "@glog//:glog",
     ],
 )
