--- a/one/leetcode/BUILD.bazel
+++ b/one/leetcode/BUILD.bazel
@@ -27,7 +27,7 @@ cc_test(
         "-Werror",
     ],
     deps = [
-        "@com_google_googletest//:gtest",
-        "@com_google_googletest//:gtest_main",
+        "@googletest//:gtest",
+        "@googletest//:gtest_main",
     ],
 )
