--- a/.editorconfig
+++ b/.editorconfig
@@ -25,10 +25,7 @@ charset = utf-8
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[WORKSPACE.bazel]
-indent_size = 4
-
-[**/BUILD.bazel]
+[**/*.bazel]
 indent_size = 4
 
 [bazel/third_party/**/*.{BUILD,WORKSPACE}]
