chore: migrate rules_foreign_cc to bzlmod

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -38,6 +38,8 @@ use_repo(llvm, "llvm_toolchain")
 
 register_toolchains("@llvm_toolchain//:all")
 
+bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
+
 bazel_dep(name = "rules_python", version = "0.33.2")
 
 pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
@@ -49,7 +51,6 @@ pip.parse(
 )
 
 use_repo(pip, "mono_pip_deps")
-
 
 bazel_dep(name = "rules_perl", version = "0.2.0")
 
