--- a/one/codelab/libevent_http/BUILD.bazel
+++ b/one/codelab/libevent_http/BUILD.bazel
@@ -31,7 +31,7 @@ cc_binary(
     deps = [
         "@gflags//:gflags",
         "@glog//:glog",
-        "@com_github_libevent_libevent//:event",
+        "@libevent//:libevent",
         "@abseil-cpp//absl/strings:cord",
     ],
 )
