--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -26,7 +26,7 @@ module(
 # Toolchains
 #
 
-bazel_dep(name = "toolchains_llvm", version = "1.0.0")
+bazel_dep(name = "toolchains_llvm", version = "1.0.0", dev_dependency = True)
 
 # Configure and register the toolchain.
 llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
@@ -37,8 +37,6 @@ llvm.toolchain(
 use_repo(llvm, "llvm_toolchain")
 
 register_toolchains("@llvm_toolchain//:all")
-
-bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
 
 bazel_dep(name = "rules_python", version = "0.33.2")
 
@@ -51,8 +49,6 @@ pip.parse(
 )
 
 use_repo(pip, "mono_pip_deps")
-
-bazel_dep(name = "rules_perl", version = "0.2.0")
 
 #
 # Dependencies
@@ -73,6 +69,7 @@ single_version_override(
 bazel_dep(name = "abseil-cpp", version = "20240116.2")
 bazel_dep(name = "gflags", version = "2.2.2")
 bazel_dep(name = "glog", version = "0.7.1")
+bazel_dep(name = "libevent", version = "2.1.12")
 bazel_dep(name = "rapidjson", version = "1.1.0")
 
 #
