--- a/one-central-registry/modules/openssl/1.1.1n/MODULE.bazel
+++ b/one-central-registry/modules/openssl/1.1.1n/MODULE.bazel
@@ -15,5 +15,15 @@
 # You should have received a copy of the GNU General Public License along with
 # ONE. If not, see <https://www.gnu.org/licenses/>.
 
-# Thie empty BUILD.bazel file is required to make Bazel treat
-# this directory as a package.
+module(
+    name = "openssl",
+    version = "1.1.1n",
+    compatibility_level = 1,
+)
+
+# Only direct dependencies need to be listed below.
+# Please keep the versions in sync with the versions in the WORKSPACE file.
+
+bazel_dep(name = "platforms", version = "0.0.10")
+bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
+bazel_dep(name = "rules_perl", version = "0.2.0")
