--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -31,7 +31,7 @@ bazel_dep(name = "toolchains_llvm", version = "1.0.0", dev_dependency = True)
 # Configure and register the toolchain.
 llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
 llvm.toolchain(
-   llvm_version = "17.0.6",
+    llvm_version = "17.0.6",
 )
 
 use_repo(llvm, "llvm_toolchain")
@@ -93,9 +93,4 @@ bazel_dep(name = "google_benchmark", version = "1.8.5", dev_dependency = True)
 #
 #   bazel run @hedron_compile_commands//:refresh_all
 #
-bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
-git_override(
-    module_name = "hedron_compile_commands",
-    commit = "a14ad3a64e7bf398ab48105aaa0348e032ac87f8",
-    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
-)
+bazel_dep(name = "hedron_compile_commands", version = "20240628.1", dev_dependency = True)
