chore: build libevent against boringssl

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -78,7 +78,7 @@ single_version_override(
 bazel_dep(name = "abseil-cpp", version = "20240116.2")
 bazel_dep(name = "gflags", version = "2.2.2")
 bazel_dep(name = "glog", version = "0.7.1")
-bazel_dep(name = "libevent", version = "2.1.12")
+bazel_dep(name = "libevent", version = "2.1.12-bcr.1")
 bazel_dep(name = "rapidjson", version = "1.1.0")
 
 #
